feat: add verty status
